src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBPointParameters_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBPointParameters_StringErrorContext.class */
public final class ARBPointParameters_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glPointParameterfARB(IF)V", "net/labymod/core/laby3d/opengl/error/generated/ARBPointParametersErrorContext");
        methods.put("nglPointParameterfvARB(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBPointParametersErrorContext");
        methods.put("glPointParameterfvARB(ILjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBPointParametersErrorContext");
        methods.put("glPointParameterfvARB(I[F)V", "net/labymod/core/laby3d/opengl/error/generated/ARBPointParametersErrorContext");
        return methods;
    }
}
